--- a/css/responsive-custom.css
+++ b/css/responsive-custom.css
@@ -11,14 +11,17 @@ h1, h2 { font-family: NeurialGrotesk-Medium, "Pyidaungsu-Bold", "Arial", sans-se
 
 /* CUSTOM STARTS HERE
 --------------------------------------------------*/
-@media only screen and (max-width: 1024px) { .collapse:not(.show) { display: none !important; }
-  .navbar-expand-lg { -ms-flex-wrap: wrap; flex-wrap: wrap; }
-  .navbar-expand-lg .navbar-toggler { display: block; outline: none; }
+@media only screen and (max-width: 1024px) { #navbar-top { width: 100%; margin: 0 2rem; }
+  .collapse:not(.show) { display: none !important; }
+  .navbar-expand-lg { -ms-flex-wrap: wrap; flex-wrap: wrap; width: 100%; }
+  .navbar-expand-lg .navbar-toggler { display: block; outline: none; position: absolute; right: 0; top: -70px; padding: 2rem; }
+  .navbar-expand-lg .navbar-toggler.active .navbar-toggler-icon { background: transparent; }
+  .navbar-expand-lg .navbar-toggler.active .navbar-toggler-icon::before { top: 0; transform: rotate(-135deg); }
+  .navbar-expand-lg .navbar-toggler.active .navbar-toggler-icon::after { top: 0; transform: rotate(135deg); }
   .navbar-expand-lg .navbar-nav { -ms-flex-direction: column; flex-direction: column; }
   .navbar-expand-lg .navbar-collapse { flex-basis: 100%; }
   .navbar-toggler-icon { width: 3rem; height: 3px; background-image: none !important; background-color: #ffffff; display: inline-block; border-radius: 10px; position: relative; }
   .navbar-toggler-icon::after, .navbar-toggler-icon::before { width: 3rem; height: 3px; background-image: none !important; background-color: #ffffff; display: inline-block; border-radius: 10px; content: ""; position: absolute; left: 0; transition: all 0.3s ease-out; }
   .navbar-toggler-icon::after { top: -6px; }
   .navbar-toggler-icon::before { top: 6px; }
-  .collapse.show { display: block !important; }
-  #navbar-top { width: 100%; margin: 0 2rem; } }
+  .collapse.show { display: block !important; } }
