--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -103,6 +103,7 @@
           {% endif %}
             {{ page.header }}
             {% if page.primary_menu or page.header_form %}
+              <input type="checkbox" class="navbar__checkbox" id="navi-toggle">
               <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#CollapsingNavbar" aria-controls="CollapsingNavbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
               <div class="navbar-background">&nbsp;</div>
               <div class="collapse navbar-collapse" id="CollapsingNavbar">
