--- a/scss/responsive-custom.scss
+++ b/scss/responsive-custom.scss
@@ -12,21 +12,33 @@
     @include flex-wrap;
     width: $one-column-width;
     .navbar-toggler {
+      @include box-shadow($shadows);
+      height: 7rem;
+      width: 7rem;
       display: block;
       outline: none;
-      position: absolute;
-      right: 0;
-      top: -70px;
-      padding: 2rem;
-      &.active .navbar-toggler-icon {
-        background: transparent;
-        &::before {
-          top: 0;
-          transform: rotate(-135deg);
+      position: fixed;
+      right: 60px;
+      top: 10rem;
+      background: $color-white;
+      z-index: 2000;
+      border-radius: 50%;
+      text-align: center;
+      cursor: pointer;
+      &.active {
+        & ~ .navbar-background {
+          @include scale(80);
         }
-        &::after {
-          top: 0;
-          transform: rotate(135deg);
+        .navbar-toggler-icon {
+          background: transparent;
+          &::before {
+            top: 0;
+            transform: rotate(-135deg);
+          }
+          &::after {
+            top: 0;
+            transform: rotate(135deg);
+          }
         }
       }
     }
@@ -57,5 +69,16 @@
   }
   .collapse.show {
     display: block !important;
+  }
+  .navbar-background {
+    height: 6rem;
+    width: 6rem;
+    border-radius: 50%;
+    position: fixed;
+    top: 10.5rem;
+    right: 6.5rem;
+    background: #fff;
+    z-index: 1000;
+    transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
   }
 }
