--- a/scss/responsive-custom.scss
+++ b/scss/responsive-custom.scss
@@ -29,10 +29,6 @@
         & ~ .navbar-background {
           @include scale(80);
         }
-        & ~ .navbar-collapse {
-          opacity: 1;
-          width: $one-column-width;
-        }
         .navbar-toggler-icon {
           background: transparent;
           &::before {
@@ -92,7 +88,8 @@
     }
   }
   .collapse.show {
-    display: block !important;
+    opacity: 1;
+    width: $one-column-width;
   }
   .navbar-background {
     height: 6rem;
@@ -101,7 +98,7 @@
     position: fixed;
     top: 10.5rem;
     right: 6.5rem;
-    background: #fff;
+    background: $secondary-color;
     z-index: 1000;
     transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
   }
