changed hamburger menu

--- a/scss/custom-variables.scss
+++ b/scss/custom-variables.scss
@@ -570,7 +570,7 @@ h2 {
   width: 3rem;
   height: 3px;
   background-image: none !important;
-  background-color: $primary-color;
+  background-color: $color-white;
   display: inline-block;
   border-radius: 10px;
 }
