--- a/scss/responsive-custom.scss
+++ b/scss/responsive-custom.scss
@@ -16,8 +16,14 @@
       width: 7rem;
       display: block;
       outline: none;
-      cursor: pointer;
+      position: fixed;
+      right: 35px;
+      top: 8.5rem;
+      z-index: 2;
       &.active {
+        & ~ .navbar-background {
+          @include scale(20);
+        }
         .navbar-toggler-icon {
           background: transparent;
           &::before {
@@ -55,5 +61,20 @@
     &::before {
       top: 6px;
     }
+  }
+  .navbar-background {
+    height: 6rem;
+    width: 6rem;
+    border-radius: 50%;
+    position: fixed;
+    top: 9.2rem;
+    right: 4rem;
+    background-image: radial-gradient(#7ed56f, #28b485);
+    -webkit-transition: -webkit-transform 0.3s cubic-bezier(0.86, 0, 0.07, 1);
+    transition: -webkit-transform 0.3s cubic-bezier(0.86, 0, 0.07, 1);
+    transition: transform 0.3s cubic-bezier(0.86, 0, 0.07, 1);
+    transition: transform 0.3s cubic-bezier(0.86, 0, 0.07, 1),
+      -webkit-transform 0.3s cubic-bezier(0.86, 0, 0.07, 1);
+    z-index: 1;
   }
 }
