--- a/css/responsive-custom.css
+++ b/css/responsive-custom.css
@@ -22,8 +22,11 @@ h1, h2 { font-family: NeurialGrotesk-Medium, "Pyidaungsu-Bold", "Arial", sans-se
   .navbar-expand-lg .navbar-nav { -ms-flex-direction: column; flex-direction: column; position: fixed; top: 13rem; right: 10rem; text-align: center; z-index: 2000; display: none; }
   .navbar-expand-lg .navbar-collapse { flex-basis: 100%; }
   .navbar-expand-lg .navbar-collapse.show .navbar-nav { display: block; transition: all 0.3s; }
+  .navbar-expand-lg .navbar-collapse ul li.nav-item a::before { border-bottom: 2px solid #ffffff; }
+  .navbar-expand-lg .navbar-collapse ul li.nav-item a.is-active { color: #ffffff; }
+  .navbar-expand-lg .navbar-collapse ul li.nav-item a.is-active::before { border-bottom: 2px solid #ffffff; }
   .navbar-toggler-icon { width: 3rem; height: 3px; background-image: none !important; background-color: #ffffff; display: inline-block; border-radius: 10px; position: relative; }
   .navbar-toggler-icon::after, .navbar-toggler-icon::before { width: 3rem; height: 3px; background-image: none !important; background-color: #ffffff; display: inline-block; border-radius: 10px; content: ""; position: absolute; left: 0; transition: all 0.3s ease-out; }
   .navbar-toggler-icon::after { top: -6px; }
   .navbar-toggler-icon::before { top: 6px; }
-  .navbar-background { height: 6rem; width: 6rem; border-radius: 50%; position: fixed; top: 9.2rem; right: 4rem; background-image: radial-gradient(#7ed56f, #28b485); -webkit-transition: -webkit-transform 0.3s cubic-bezier(0.86, 0, 0.07, 1); transition: 3s cubic-bezier(0.17, 0.67, 0.83, 0.67); z-index: 1000; } }
+  .navbar-background { height: 6rem; width: 6rem; border-radius: 50%; position: fixed; top: 9.2rem; right: 4rem; background: #a10000; transition: 0.3s cubic-bezier(0.17, 0.67, 0.83, 0.67); z-index: 1000; } }
