--- a/scss/responsive-custom.scss
+++ b/scss/responsive-custom.scss
@@ -52,6 +52,17 @@
         display: block;
         transition: all 0.3s;
       }
+      ul li.nav-item a {
+        &::before {
+          border-bottom: 2px solid $color-white;
+        }
+        &.is-active {
+          color: $color-white;
+          &::before {
+            border-bottom: 2px solid $color-white;
+          }
+        }
+      }
     }
   }
   .navbar-toggler-icon {
@@ -79,9 +90,8 @@
     position: fixed;
     top: 9.2rem;
     right: 4rem;
-    background-image: radial-gradient(#7ed56f, #28b485);
-    -webkit-transition: -webkit-transform 0.3s cubic-bezier(0.86, 0, 0.07, 1);
-    transition: 3s cubic-bezier(0.17, 0.67, 0.83, 0.67);
+    background: $secondary-color;
+    transition: 0.3s cubic-bezier(0.17, 0.67, 0.83, 0.67);
     z-index: 1000;
   }
 }
